fixed issue with hamburger menu link on mobile

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -40,6 +40,10 @@ a {
 	text-decoration: none;
 }
 
+a:visited{
+	color:#FF2B06;
+}
+
 a:hover{
 	color:#FF2B06;
 	text-decoration: none;
